Fix scrollbars appearing on summary

--- a/src/components/terrain-summary.scss
+++ b/src/components/terrain-summary.scss
@@ -8,7 +8,6 @@
   .row{
     height: 50px;
     vertical-align: middle;
-    overflow: auto;
     .column{
       display: inline-block;
       position: relative;
